# GuiTerminal

./: .gitattributes  .gitignore  CMakeLists.txt  GuiTerminal.def  GuiTerminal.nuspec  GuiTerminal.slnx  GuiTerminal.vcxproj  GuiTerminal.vcxproj.filters  GuiTerminalDll.vcxproj  GuiTerminalDll.vcxproj.filters  LICENSE  README-VCPKG.md  README.md
.github/workflows/: publish-nuget.yml  publish-vcpkg-registry.yml
cmake/: GuiTerminalConfig.cmake.in
demo/: GuiTerminalDemo.vcxproj  GuiTerminalDemo.vcxproj.filters  demo.cpp  demo.rc
include/: GuiTerminalBuffer.h  GuiTerminalC.h  GuiTerminalControl.h  GuiTerminalParser.h  GuiTerminalRenderer.h
nuget/: pack.ps1
scripts/: build-vcpkg-registry.ps1
src/: GuiTerminalBuffer.cpp  GuiTerminalC.cpp  GuiTerminalControl.cpp  GuiTerminalParser.cpp  GuiTerminalRenderer.cpp  dllmain.cpp
utils/: eolconverter.ps1  fixeol.bat
vcpkg/ports/guiterminal/: portfile.cmake  vcpkg.json
